--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,8 @@
   "compileOnSave": false,
   "compilerOptions": {
     "importHelpers": true,
+        "skipLibCheck": true,
+
     "module": "es2020",
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
