--- a/package.json
+++ b/package.json
@@ -5,89 +5,51 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "test": "npx playwright test",
-    "test:chrome": "npx playwright test --project=chromium",
-    "test:firefox": "npx playwright test --project=firefox",
-    "pageObject-chrome": "npx playwright test usePageObject.spec.ts --project=chromium",
-    "pageObject-firefox": "npx playwright test usePageObject.spec.ts --project=firefox",
-    "pageObject-all": "npm run pageObject-chrome && npm run pageObject-firefox"
+    "test": "ng test",
+    "build": "ng build",
+    "e2e": "ng e2e"
   },
   "dependencies": {
-    "@angular/animations": "12.2.17",
-    "@angular/cdk": "12.2.17",
-    "@angular/common": "12.2.17",
-    "@angular/compiler": "12.2.17",
-    "@angular/core": "12.2.17",
-    "@angular/forms": "12.2.17",
-    "@angular/platform-browser": "12.2.17",
-    "@angular/platform-browser-dynamic": "12.2.17",
-    "@angular/router": "12.2.17",
-
-    "@asymmetrik/ngx-leaflet": "3.0.1",
-
+    "@angular/animations": "14.2.12",
+    "@angular/cdk": "14.2.7",
+    "@angular/common": "14.2.12",
+    "@angular/compiler": "14.2.12",
+    "@angular/core": "14.2.12",
+    "@angular/forms": "14.2.12",
+    "@angular/platform-browser": "14.2.12",
+    "@angular/platform-browser-dynamic": "14.2.12",
+    "@angular/router": "14.2.12",
     "@nebular/auth": "10.0.0",
     "@nebular/eva-icons": "10.0.0",
     "@nebular/security": "10.0.0",
     "@nebular/theme": "10.0.0",
-
-    "@swimlane/ngx-charts": "20.1.2",
-
-    "angular2-chartjs": "0.4.1",
+    "@swimlane/ngx-charts": "^20.1.2",
     "bootstrap": "4.3.1",
-    "classlist.js": "1.1.20150312",
-    "core-js": "3.6.5",
-    "echarts": "4.9.0",
-    "eva-icons": "1.1.3",
-    "intl": "1.2.5",
-    "ionicons": "2.0.1",
+    "chart.js": "^2.9.4",
+    "core-js": "2.5.1",
+    "echarts": "^4.9.0",
+    "eva-icons": "^1.1.3",
     "leaflet": "1.2.0",
-    "nebular-icons": "1.1.0",
-    "ng2-completer": "9.0.1",
-    "ng2-smart-table": "1.6.0",
-    "ngx-echarts": "4.2.2",
+    "ng2-completer": "^9.0.1",
+    "ng2-smart-table": "^1.6.0",
+    "ngx-echarts": "^4.2.2",
     "normalize.css": "6.0.0",
-    "pace-js": "1.0.2",
-    "roboto-fontface": "0.8.0",
-    "rxjs": "6.6.7",
-    "rxjs-compat": "6.3.0",
-    "sass": "1.32.13",
-    "socicon": "3.0.5",
-    "style-loader": "1.3.0",
-    "tslib": "2.3.1",
-    "typeface-exo": "0.0.22",
-    "web-animations-js": "2.3.2",
-    "zone.js": "0.11.4"
-  },
-
-  "devDependencies": {
-    "@angular-devkit/build-angular": "12.2.18",
-    "@angular/cli": "12.2.18",
-    "@angular/compiler-cli": "12.2.17",
-    "@angular/language-service": "12.2.17",
-
-    "@compodoc/compodoc": "1.1.19",
-    "@faker-js/faker": "10.1.0",
-    "@fortawesome/fontawesome-free": "5.2.0",
-    "@playwright/test": "1.56.1",
-    "@types/leaflet": "1.2.3",
-    "@types/node": "12.12.70",
-
-    "codelyzer": "6.0.2",
-    "conventional-changelog-cli": "2.2.2",
-    "dotenv": "17.2.3",
-    "npm-run-all": "4.0.2",
+    "pace-js": "^1.0.2",
     "rimraf": "2.6.1",
-    "stylelint": "15.6.0",
-    "ts-node": "10.9.1",
-    "tslint": "6.1.3",
-    "tslint-language-service": "0.9.9",
-    "typescript": "4.3.5",
-    "webpack": "5.102.1",
-    "webpack-cli": "6.0.1"
+    "rxjs": "6.6.7",
+    "sass": "^1.62.0",
+    "tslib": "^2.3.1",
+    "zone.js": "~0.11.4"
   },
-  "overrides": {
-  "ws": "7.5.7",
-  "@types/ws": "7.4.7"
-}
-
+  "devDependencies": {
+    "@angular-devkit/build-angular": "14.2.13",
+    "@angular/cli": "14.2.10",
+    "@angular/compiler-cli": "14.2.12",
+    "@angular/language-service": "14.2.12",
+    "@playwright/test": "^1.56.1",
+    "@types/eslint": "^8.8.1",
+    "@types/minimatch": "^3.0.2",
+    "@types/node": "^16.11.56",
+    "typescript": "~4.8.4"
+  }
 }
